[gd_scene load_steps=9 format=3 uid="uid://ovgkdyqcoylo"]

[ext_resource type="Script" path="res://scenes/battle/instructions.gd" id="1_wc6bf"]
[ext_resource type="Texture2D" uid="uid://dw0t53ppvf0h6" path="res://assets/gui/PopUpPatch1.png" id="2_w7451"]
[ext_resource type="Texture2D" uid="uid://dteedhddcx78r" path="res://assets/gui/Arrow1Idle.png" id="3_ifjm2"]
[ext_resource type="Texture2D" uid="uid://dpchd4ojt1tdi" path="res://assets/gui/Arrow1Hover.png" id="4_5pddb"]
[ext_resource type="Texture2D" uid="uid://cq3hwv1raks0l" path="res://assets/gui/Continue1Idle.png" id="5_vbkuo"]
[ext_resource type="Texture2D" uid="uid://ur6wyu2ue1ie" path="res://assets/gui/Continue1hover.png" id="6_vje85"]
[ext_resource type="FontFile" uid="uid://g3y2p3jvdanf" path="res://assets/gui/ARIALBD.TTF" id="7_ea82k"]

[sub_resource type="LabelSettings" id="LabelSettings_e37t3"]
font = ExtResource("7_ea82k")
font_size = 32

[node name="Instructions" type="Node2D"]
z_index = 4000
script = ExtResource("1_wc6bf")

[node name="Cover" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1920, 1080)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="Panel" type="Sprite2D" parent="."]
position = Vector2(960, 540)
scale = Vector2(1.3, 1.3)
texture = ExtResource("2_w7451")

[node name="Text" type="Sprite2D" parent="."]
position = Vector2(960, 540)

[node name="Prev" type="TextureButton" parent="."]
offset_left = 631.0
offset_top = 801.0
offset_right = 931.0
offset_bottom = 1001.0
texture_normal = ExtResource("3_ifjm2")
texture_hover = ExtResource("4_5pddb")
stretch_mode = 3
flip_h = true

[node name="Next" type="TextureButton" parent="."]
offset_left = 1043.0
offset_top = 807.0
offset_right = 1343.0
offset_bottom = 1007.0
texture_normal = ExtResource("3_ifjm2")
texture_hover = ExtResource("4_5pddb")
stretch_mode = 5

[node name="Continue" type="TextureButton" parent="."]
offset_left = 875.0
offset_top = 109.0
offset_right = 1089.0
offset_bottom = 260.0
texture_normal = ExtResource("5_vbkuo")
texture_hover = ExtResource("6_vje85")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="."]
offset_left = 960.0
offset_top = 886.0
offset_right = 1004.0
offset_bottom = 922.0
text = "1/3"
label_settings = SubResource("LabelSettings_e37t3")

[connection signal="pressed" from="Prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Continue" to="." method="_on_continue_pressed"]
